    updating any application code that explicitly expected the exception term
    permission_error(access, local_predicate, Pred), which have been changed
    to permission_error(access, private_predicate, Pred).

    Added support for parsing operator declarations in the uses/2, public/1,
    protected/1, and private/1 directives.

    Updated the Logtalk compiler to convert calls to the non-standard assert/1
    built-in predicate as calls to the assertz/1 built-in predicate.

    Updated the Logtalk compiler in order to reject use_module/2 directives
    where the first argument is not an atom (assumed to be the module name).
    This change results in using the config files to find the module name from
    the module file name when the first argument of the use_module/2 directive
    is a compound term (as usual when using library notation).

    Updated the definition of the pseudo-object "user" in order to virtually
    contain the definition of all Prolog built-in predicates.

    Updated the definition of the built-in object "logtalk" in order to
    implement the built-in protocol "expanding".

    Updated the "expanding" built-in protocol in order to declare the
    predicates goal_expansion/2 and term_expansion/2 as both dynamic and
    multifile.

    Corrected a bug in the Logtalk compiler where a misleading error would be
    reported when a source file contains a clause or a directive that is a
    plain variable.

    Corrected a bug in the Logtalk compiler where a broken term_expansion/2
    definition expanding a term to a variable would succeed instead of
    throwing an error.

    Optimized meta-calls when using closures wrapped in the {}/1 control
    construct. Removed redundant check for debugging mode when executing
    meta-calls.

    Corrected a potential bug in the Logtalk runtime when updating the meta-
    call context for lambda expressions that could result in losing part of
    the context.
